# debateagent

./: .gitignore
debateagent-backend/: Cargo.toml
debateagent-backend/src/: main.rs
debateagent-frontend/: package-lock.json  package.json
debateagent-frontend/src/app/: GsapBackground.js  app.css  globals.css  layout.js  page.js
debateagent-frontend/src/app/chat/: chat.css  page.js
