[package]
name = "debateagent-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
async-openai = "0.26"
dotenvy = "0.15"
reqwest = { version = "0.13.2", features = ["json"] }
tower_governor = "0.4.2"